fixed the background

--- a/thelittlemermain.html
+++ b/thelittlemermain.html
@@ -3,5 +3,5 @@
     <title>the little mermaid</title>
 </head>
 <body>
-    <img src="../images/the_little_mermaid.PNG">
+    <img src="images/the_little_mermaid_background.PNG">
 </body>
