--- a/thelittlemermaid.html
+++ b/thelittlemermaid.html
@@ -3,5 +3,7 @@
     <title>the little mermaid</title>
 </head>
 <body>
+    <div id="bg_img">
     <img src="images/the_little_mermaid_background.PNG">
+    </div>
 </body>
