tried to fix the bg

--- a/thelittlemermaid.html
+++ b/thelittlemermaid.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title>the little mermaid</title>
+    <link  rel="stylesheet"  href="thlittlemermaid.css" />
 </head>
 <body>
     <div id="bg_img">
