i add background to html

--- a/the_lion_king/lion_king.html
+++ b/the_lion_king/lion_king.html
@@ -2,10 +2,10 @@
 <!DOCTYPE html>
 <head>
     <title>Lion King</title>
-    <link type="text/css" rel="stylesheet"  href="thelittlemermaid.css" />
+   
 </head>
 <body>
     
-    <img id="bg_img" src= "../images/the_little_mermaid_background.PNG"/>
+    <img id="bg_img" src= "../images/lion_king_background.jpg"/>
 
 </body>
