fixed the bg and added friend 1

--- a/thelittlemermaid/thelittlemermaid.html
+++ b/thelittlemermaid/thelittlemermaid.html
@@ -3,8 +3,13 @@
     <title>the little mermaid</title>
     <link type="text/css" rel="stylesheet"  href="thelittlemermaid.css" />
 </head>
-<body>
-    
-    <img id="bg_img" src= "../images/the_little_mermaid_background.PNG"/>
+
+<body> 
+
+    <img id="friend1" src="../Images/the_little_mermaid_friend1.PNG "/>
+    <!-- <img id="friend2" src="../Images/the_little_mermaid_friend2.PNG "/> -->
+    <!-- <img id="ariel" src="../Images/the_little_mermaid_the_little_mermaid.PNG "/> -->
+
+
 
 </body>
