--- a/thelittlemermaid/thelittlemermaid.html
+++ b/thelittlemermaid/thelittlemermaid.html
@@ -6,7 +6,7 @@
 
 <body> 
 
-    <img id="friend1" src="../Images/the_little_mermaid_friend1.PNG "/>
+    <img id="friend1" src="../Images/thelittlemermaid_fish.jpg "/>
     <img id="friend2" src="../Images/the_little_mermaid_friend2.PNG "/> 
     <img id="ariel" src="../Images/the_little_mermaid_the_little_mermaid.PNG "/> 
 
