--- a/thelittlemermaid/thelittlemermaid.html
+++ b/thelittlemermaid/thelittlemermaid.html
@@ -8,7 +8,7 @@
 
     <img id="friend1" src="../Images/thelittlemermaid_fish.jpg "/>
     <img id="friend2" src="../Images/the_little_mermaid_friend2.PNG "/> 
-    <img id="ariel" src="../Images/the_little_mermaid_the_little_mermaid.PNG "/> 
+    <img id="ariel" src="../Images/thelittlemermaid_ariel.jpg "/> 
 
 
 
