--- a/thelittlemermaid/thelittlemermaid.html
+++ b/thelittlemermaid/thelittlemermaid.html
@@ -6,8 +6,8 @@
 
 <body> 
 
-    <img id="friend1" src="../Images/thelittlemermaid_fish.jpg "/>
-    <img id="friend2" src="../Images/the_little_mermaid_friend2.PNG "/> 
+    <img id="friend1" src="../Images/thelittlemermaid_fish1.png "/>
+    <img id="friend2" src="../Images/thelittlemermaid_crab1.png "/> 
     <img id="ariel" src="../Images/thelittlemermaid_ariel1.png "/> 
 
 
