--- a/thelittlemermaid/thelittlemermaid.html
+++ b/thelittlemermaid/thelittlemermaid.html
@@ -2,11 +2,12 @@
 <head>
     <title>the little mermaid</title>
     <link type="text/css" rel="stylesheet"  href="thelittlemermaid.css" />
+    <script> src="thelittlemermaid.js"</script>
 </head>
 
 <body> 
 
-    <img id="friend1" src="../Images/thelittlemermaid_fish1.png "/>
+    <img id="friend1" onclick="found" src="../Images/thelittlemermaid_fish1.png "/>
     <img id="friend2" src="../Images/thelittlemermaid_crab1.png "/> 
     <img id="ariel" src="../Images/thelittlemermaid_ariel1.png "/> 
 
