--- a/thelittlemermaid/thelittlemermaid.html
+++ b/thelittlemermaid/thelittlemermaid.html
@@ -7,7 +7,7 @@
 
 <body> 
 
-    <img id="friend1" onclick="found" src="../Images/thelittlemermaid_fish1.png "/>
+    <img id="friend1" onclick()="found" src="../Images/thelittlemermaid_fish1.png "/>
     <img id="friend2" src="../Images/thelittlemermaid_crab1.png "/> 
     <img id="ariel" src="../Images/thelittlemermaid_ariel1.png "/> 
 
