added the found function in the little mermaid

--- a/thelittlemermaid/thelittlemermaid.html
+++ b/thelittlemermaid/thelittlemermaid.html
@@ -8,8 +8,8 @@
 <body> 
 
     <img id="friend1"  src="../Images/thelittlemermaid_fish1.png " onclick="found()"/>
-    <img id="friend2" src="../Images/thelittlemermaid_crab1.png "/> 
-    <img id="ariel" src="../Images/thelittlemermaid_ariel1.png "/> 
+    <img id="friend2" src="../Images/thelittlemermaid_crab1.png " onclick="found()"/> 
+    <img id="ariel" src="../Images/thelittlemermaid_ariel1.png " /> 
 
 
 
