--- a/thelittlemermaid/thelittlemermaid.html
+++ b/thelittlemermaid/thelittlemermaid.html
@@ -8,7 +8,7 @@
 <body> 
 
     <img id="friend1"  src="../Images/thelittlemermaid_fish1.png " onclick="found()"/>
-    <img id="friend2" src="../Images/thelittlemermaid_crab1.png " onclick="found()"/> 
+    <img id="friend2" src="../Images/thelittlemermaid_crab1.png " onclick="found2()"/> 
     <img id="ariel" src="../Images/thelittlemermaid_ariel1.png " /> 
 
 
