--- a/thelittlemermaid/thelittlemermaid.html
+++ b/thelittlemermaid/thelittlemermaid.html
@@ -10,6 +10,7 @@
     <img id="friend1"  src="../Images/thelittlemermaid_fish1.png " onclick="found()"/>
     <img id="friend2" src="../Images/thelittlemermaid_crab1.png " onclick="found2()"/> 
     <img id="ariel" src="../Images/thelittlemermaid_ariel1.png " /> 
+    <!-- <img id="ursula" src="../Images/the_little_mermaid_ursula.PNG " />  -->
 
 
 
