--- a/moana/moana.html
+++ b/moana/moana.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <img class="resize" src="../Images/moana2-image.png "/>
-    
+  
+    <div><h1> שלום הגעתם לחדר של מואנה! בשביל לעבור לחדר הבא עליכם לענות על 3 חידות. בהצלחה! </h1>
+         </div>
+         <input type="button" name="button1" value="1">
+         <input type="button" name="button2" value="2">
+         <input type="button" name="button3" value="3">
 </body>
 </html>
