--- a/the_lion_king/lion_king.html
+++ b/the_lion_king/lion_king.html
@@ -7,8 +7,8 @@
   <img id="bg_img" src="../images/lion_king_background.jpg" />
   <img id="Character0" src="../images/the_lion_guard__isingoma_vector_by_shiragaza_dat4sua-fullview-removebg-preview.png" />
   <img id="Character1" src="../images/the_lion_guard__kato_vector__shadow_version__by_shiragaza_dat4xcr-fullview-removebg-preview.png" />
-  <img id="Character2" src="../images/ the_lion_guard__nne_vector__shadow_version__by_shiragaza_dat44d1-fullview-removebg-preview.png" />
-   <img id="Character3" src="../images/  the_lion_guard__tano_vector_by_shiragaza_daocdpw-fullview-removebg-preview.png" />
+  <img id="Character2" src="../images/the_lion_guard__nne_vector__shadow_version__by_shiragaza_dat44d1-fullview-removebg-preview.png" />
+  <img id="Character3" src="../images/the_lion_guard__tano_vector_by_shiragaza_daocdpw-fullview-removebg-preview.png" />
  
   <div class="myDiv">
   <h2>Welcome to The Lion King Room</h2>
