--- a/the_lion_king/lion_king.html
+++ b/the_lion_king/lion_king.html
@@ -3,17 +3,12 @@
   <title>Lion King</title>
 </head>
 <body>
-  <div>hello</div>
   <img id="bg_img" src="../images/lion_king_background.jpg" />
-  <img id="Character0" src="../images/the_lion_guard__isingoma_vector_by_shiragaza_dat4sua-fullview-removebg-preview.png" />
-  <img id="Character1" src="../images/the_lion_guard__kato_vector__shadow_version__by_shiragaza_dat4xcr-fullview-removebg-preview.png" />
-  <img id="Character2" src="../images/the_lion_guard__nne_vector__shadow_version__by_shiragaza_dat44d1-fullview-removebg-preview.png" />
-  <img id="Character3" src="../images/the_lion_guard__tano_vector_by_shiragaza_daocdpw-fullview-removebg-preview.png" />
+  <img id="Character0" src="../images/the_lion_guard__isingoma_vector_by_shiragaza_dat4sua-fullview-removebg-preview.png" onclick="img()" />
+  <img id="Character1" src="../images/the_lion_guard__kato_vector__shadow_version__by_shiragaza_dat4xcr-fullview-removebg-preview.png" onclick="img1()" />
+  <img id="Character2" src="../images/the_lion_guard__nne_vector__shadow_version__by_shiragaza_dat44d1-fullview-removebg-preview.png" onclick="img2()" />
+  <img id="Character3" src="../images/the_lion_guard__tano_vector_by_shiragaza_daocdpw-fullview-removebg-preview.png" onclick="img3()"/>
  
-  <div class="myDiv">
-  <h2>Welcome to The Lion King Room</h2>
-  <p>In this room you will have to fight the hyenas with the click of a mouse to them, if you succeed you will move to the next room.</p>
-</div>
 
  
 </body>
