added favicon, made the hainas appear and disappear

--- a/the_lion_king/lion_king.html
+++ b/the_lion_king/lion_king.html
@@ -3,6 +3,7 @@
   <title>Lion King</title>
     <link type="text/css" rel="stylesheet"  href="lion_king.css" />
     <script src="lion_king.js"></script>
+    <link rel="icon" type="image/x-icon" href="../images/lionking.ico">
 </head>
 <body>
 
