the littile mermaid - added favicon, explanation

--- a/thelittlemermaid/thelittlemermaid.html
+++ b/thelittlemermaid/thelittlemermaid.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <head>
-    <title>the little mermaid</title>
+    <title>The Little Mermaid</title>
     <link type="text/css" rel="stylesheet"  href="thelittlemermaid.css" />
     <script src="thelittlemermaid.js"></script>
+    <link rel="icon" type="image/x-icon" href="../images/shell.ico">
 </head>
 
 <body> 
-
+    <div class="myDiv">
+        <h2>Welcome to The Little Mermaid Room</h2>
+        <p>In this room you will have help Ariel find her friends!</p>
+      </div>
     <img id="friend1"  src="../Images/thelittlemermaid_fish1.png " onclick="found()"/>
     <img id="friend2" src="../Images/thelittlemermaid_crab1.png " onclick="found2()"/> 
     <img id="ariel" src="../Images/thelittlemermaid_ariel1.png " /> 
