added opening and finishing pages, connected arial's page to lion king

--- a/thelittlemermaid/thelittlemermaid.html
+++ b/thelittlemermaid/thelittlemermaid.html
@@ -11,11 +11,13 @@
         <h2>Welcome to The Little Mermaid Room</h2>
         <p>In this room you will have help Ariel find her friends!</p>
       </div>
+    <div class="container">
+        <img id="arielWithLegs" src="../images/ariel-legs-gif.gif" style="visibility: hidden;" onclick="nextroom()" />
+        <div id="legs_text" class="top-left">Click on the picture to move to the next room!</div>
+    </div>
     <img id="friend1"  src="../Images/thelittlemermaid_fish1.png " onclick="found()"/>
     <img id="friend2" src="../Images/thelittlemermaid_crab1.png " onclick="found2()"/> 
     <img id="ariel" src="../Images/thelittlemermaid_ariel1.png " /> 
     <!-- <img id="ursula" src="../Images/the_little_mermaid_ursula.PNG " />  -->
-
-
 
 </body>
