lion king - final touches

--- a/the_lion_king/lion_king.html
+++ b/the_lion_king/lion_king.html
@@ -17,6 +17,6 @@
     <h2>Welcome to The Lion King Room</h2>
     <p>In this room you will have to fight the hypocrites by clicking on them, if you succeed you will move to the next room.</p>
   </div>
-  <div id="button" onclick="button1"></div>
+  <button id="caveEntrence"></button>
 </body>
 
